feat(policy engine): Add more tests with better rules and extend engine to comparing rules
- Add a CompareArtifactRule which allows to identify violations due to properties of two artifacts
- Add test rules that are more complex
- Add first domain model methods to the ThirdPartyArtifact facade
- Test the policy engine in more depth concerning configuration via the Antenna mechanism
- New mechanism for racing policy violations
- Removal of imperative stuff, using groupingBy
- Removal of any index based access of collections
- Renaming of RuleSet to Ruleset, fixing a typo
- Add purl creator for ThirdPartyArtifact
- ToDo: Add purl support in Antenna model
- Minor reformatting and better naming

Signed-off-by: Lars Geyer-Blaumeiser <lars.geyer-blaumeiser@bosch-si.com>